add playbooks and edit file inventory.ini

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,2 @@
-localhost ansible_connection=local
-
-[allserv:children]
-sqldump
-frontend
-
-[sqldump]
-158.160.134.53
-puding ansible_host=158.160.134.53
-[frontend]
-51.250.32.147
-yogurt ansible_host=51.250.32.147
-
-#sos
+[webservers]
+158.160.188.5
